log.txt
error[E0423]: expected function, tuple struct or tuple variant, found struct `CardHandle`
  --> src/civilization/concepts/civ_cards/civ_cards_plugin.rs:56:13
   |
56 |     let h = CardHandle(card_handle);
   |             ^^^^^^^^^^
   |
help: a local variable with a similar name exists
   |
56 -     let h = CardHandle(card_handle);
56 +     let h = card_handle(card_handle);
   |